--- a/service-starter/src/main/resources/application.properties
+++ b/service-starter/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/Gym
 spring.datasource.username=gym_admin
 spring.datasource.password=gym_admin1234
 spring.jpa.hibernate.ddl-auto=none
+spring.liquibase.change-log=classpath:/db/changelog/dbchangelog-dev.xml
