--- a/adapter/secondary/repository-hibernate/pom.xml
+++ b/adapter/secondary/repository-hibernate/pom.xml
@@ -1,19 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>GymBackend</artifactId>
+        <artifactId>adapter</artifactId>
         <groupId>pl.lodz.p.it</groupId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>adapter</artifactId>
-    <packaging>pom</packaging>
-    <modules>
-        <module>secondary/repository-hibernate</module>
-    </modules>
+    <artifactId>repository-hibernate</artifactId>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
