Add domain models & update project structure

--- a/adapter/pom.xml
+++ b/adapter/pom.xml
@@ -13,6 +13,7 @@
     <packaging>pom</packaging>
     <modules>
         <module>secondary/repository-hibernate</module>
+        <module>primary/rest-api</module>
     </modules>
 
     <properties>
