--- a/service-starter/src/main/resources/application.properties
+++ b/service-starter/src/main/resources/application.properties
@@ -3,3 +3,6 @@ spring.datasource.username=gym_admin
 spring.datasource.password=gym_admin1234
 spring.jpa.hibernate.ddl-auto=none
 spring.liquibase.change-log=classpath:/db/changelog/dbchangelog-dev.xml
+
+#Swagger docs
+springdoc.api-docs.path=/api-docs
