--- a/core/port/primary/pom.xml
+++ b/core/port/primary/pom.xml
@@ -6,17 +6,12 @@
         <artifactId>GymBackend</artifactId>
         <groupId>pl.lodz.p.it</groupId>
         <version>0.0.1-SNAPSHOT</version>
+        <relativePath>../../../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>primary</artifactId>
     <dependencies>
-        <dependency>
-            <groupId>pl.lodz.p.it</groupId>
-            <artifactId>shared</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
-            <scope>compile</scope>
-        </dependency>
         <dependency>
             <groupId>pl.lodz.p.it</groupId>
             <artifactId>shared</artifactId>
