--- a/adapter/primary/rest-api/pom.xml
+++ b/adapter/primary/rest-api/pom.xml
@@ -3,14 +3,15 @@
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>adapter</artifactId>
+        <artifactId>GymBackend</artifactId>
         <groupId>pl.lodz.p.it</groupId>
         <version>0.0.1-SNAPSHOT</version>
-        <relativePath>/../../pom.xml</relativePath>
+        <relativePath>/../../../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>rest-api</artifactId>
+
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
@@ -41,6 +42,12 @@
             <artifactId>jackson-databind-nullable</artifactId>
             <version>${openapi.jackson.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>pl.lodz.p.it</groupId>
+            <artifactId>primary</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -60,8 +67,8 @@
                                 ${project.basedir}${swagger.yaml.file.path}
                             </inputSpec>
                             <generatorName>spring</generatorName>
-                            <apiPackage>pl.lodz.p.it.controller</apiPackage>
-                            <modelPackage>pl.lodz.p.it.dto</modelPackage>
+                            <apiPackage>pl.lodz.p.it.restapi.controller</apiPackage>
+                            <modelPackage>pl.lodz.p.it.restapi.dto</modelPackage>
                             <configOptions>
                                 <delegatePattern>true</delegatePattern>
                             </configOptions>
