--- a/core/application/pom.xml
+++ b/core/application/pom.xml
@@ -12,6 +12,7 @@
 
     <artifactId>application</artifactId>
 
+
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
@@ -29,13 +30,14 @@
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
         <dependency>
-            <groupId>org.mapstruct</groupId>
-            <artifactId>mapstruct</artifactId>
-            <version>1.4.2.Final</version>
+            <groupId>pl.lodz.p.it</groupId>
+            <artifactId>secondary</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>pl.lodz.p.it</groupId>
-            <artifactId>secondary</artifactId>
+            <artifactId>primary</artifactId>
             <version>0.0.1-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
