Create Swagger documentation

--- a/service-starter/src/main/resources/application.properties
+++ b/service-starter/src/main/resources/application.properties
@@ -5,4 +5,5 @@ spring.jpa.hibernate.ddl-auto=none
 spring.liquibase.change-log=classpath:/db/changelog/dbchangelog-dev.xml
 
 #Swagger docs
-springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/api-docs
+api.yaml.source.code.filepath=src/main/resources/api/api.yml
