--- a/service-starter/src/main/resources/api/api.yml
+++ b/service-starter/src/main/resources/api/api.yml
@@ -119,6 +119,11 @@ paths:
       responses:
         201:
           description: Operation successful
+          content:
+            application/json:
+              schema:
+                type: string
+                description: User's token
 
 components:
   schemas:
