Fix issue with ERRORUNKNOWN, change property name from account to accountLogin, fix typo in SecurityException

--- a/service-starter/src/main/resources/api/schemas/booking/BookingRequestPost.yml
+++ b/service-starter/src/main/resources/api/schemas/booking/BookingRequestPost.yml
@@ -12,7 +12,7 @@ components:
         - account
         - activity
       properties:
-        account:
+        accountLogin:
           type: string
         activity:
           type: string
