--- a/service-starter/src/main/resources/api/paths/account/AccountByLogin.yml
+++ b/service-starter/src/main/resources/api/paths/account/AccountByLogin.yml
@@ -70,3 +70,54 @@ trainingPlan:
       responses:
         200:
           description: Operation successful
+
+diet:
+  add:
+    post:
+      tags:
+        - account
+      summary: Add diet
+      description: Assign a new diet to the user with provided login
+      operationId: addDiet
+      parameters:
+        - in: path
+          name: login
+          schema:
+            type: string
+          required: true
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '../../schemas/account/AccountRequestPutObject.yml#/components/schemas/AccountRequestPutObject'
+      responses:
+        200:
+          description: Operation successful
+          content:
+            application/json:
+              schema:
+                $ref: '../../schemas/account/AccountDetailsResponse.yml#/components/schemas/AccountDetailsResponse'
+        500:
+          description: Internal server error
+  remove:
+    delete:
+      tags:
+        - account
+      summary: Remove diet
+      description: Remove from user's list the diet with the given number
+      operationId: deleteDiet
+      parameters:
+        - in: path
+          name: number
+          schema:
+            type: string
+          required: true
+        - in: path
+          name: login
+          schema:
+            type: string
+          required: true
+      responses:
+        200:
+          description: Operation successful
