Add validation to dtos

--- a/service-starter/src/main/resources/api/schemas/accessLevel/AccessLevelRequestPost.yml
+++ b/service-starter/src/main/resources/api/schemas/accessLevel/AccessLevelRequestPost.yml
@@ -14,5 +14,9 @@ components:
       properties:
         level:
           type: string
+          enum:
+            - CLIENT
+            - ADMIN
+            - TRAINER
         accountLogin:
           type: string
