--- a/service-starter/src/main/resources/api/schemas/activity/ActivityRequestPut.yml
+++ b/service-starter/src/main/resources/api/schemas/activity/ActivityRequestPut.yml
@@ -16,6 +16,7 @@ components:
           format: date-time
         duration:
           type: integer
+          minimum: 1
         trainer:
           type: string
         active:
