--- a/service-starter/src/main/resources/api/schemas/account/AccountRequestPost.yml
+++ b/service-starter/src/main/resources/api/schemas/account/AccountRequestPost.yml
@@ -23,6 +23,7 @@ components:
           type: string
         password:
           type: string
+          pattern: "^(?=.*?[A-Z])(?=.*?[a-z])(?=.*?[0-9])(?=.*?[#?!@$ %^&*-]).{8,}$"
         firstName:
           type: string
         lastName:
@@ -33,3 +34,4 @@ components:
           type: boolean
         phoneNumber:
           type: number
+          pattern: "^[0-9]{9}$"
