--- a/service-starter/src/main/resources/api/schemas/account/AccountRequestPut.yml
+++ b/service-starter/src/main/resources/api/schemas/account/AccountRequestPut.yml
@@ -11,6 +11,7 @@ components:
       properties:
         password:
           type: string
+          pattern: "^(?=.*?[A-Z])(?=.*?[a-z])(?=.*?[0-9])(?=.*?[#?!@$ %^&*-]).{8,}$"
         firstName:
           type: string
         lastName:
