--- a/service-starter/src/main/resources/api/paths/diet/Diet.yml
+++ b/service-starter/src/main/resources/api/paths/diet/Diet.yml
@@ -15,7 +15,7 @@ get:
 post:
   tags:
     - diet
-  summary: Add training plan
+  summary: Add diet
   description: Create a new diet
   operationId: createDiet
   requestBody:
