--- a/service-starter/src/main/resources/api/schemas/booking/BookingRequestPost.yml
+++ b/service-starter/src/main/resources/api/schemas/booking/BookingRequestPost.yml
@@ -12,7 +12,7 @@ components:
         - account
         - activity
       properties:
-        accountLogin:
+        account:
           type: string
         activity:
           type: string
